# pc-trabalho-1

./: .clang-format  CMakeLists.txt  README.md
project/: main.c
project/lib/: pool.h  worker.h
project/src/: main.c  pool.c  worker.c
